--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=8090
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/platzi-market
+spring.datasource.url=jdbc:postgresql://localhost:5432/UN5RR
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=cdmorau
 spring.jpa.database=POSTGRESQL
