--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/platzi-market
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.database=POSTGRESQL
+spring.jpa.hibernate.ddl-auto=update
