--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,10 @@
 server.port=8090
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/platzi-market
+spring.datasource.url=jdbc:postgresql://localhost:5432/UN5
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.database=POSTGRESQL
+spring.jpa.hibernate.ddl-auto=update
+spring.security.user.name=david
+spring.security.user.password=1234
